# network_fmri

./: .gitignore  CONTRIBUTING.md  README.md  network_fmri.def  pyproject.toml
config/: curation_config.json  selection.json
docs/: DATA-SELECTION.md  SCAN-NOTES.md
docs/plans/: 2026-07-19-fmap-b0-linkage.md
docs/specs/: 2026-07-19-fmap-b0-linkage-design.md
src/network_fmri/: __init__.py  b0link.py  curation.py  datalad_ds.py  heuristic.py  run.py  session_map.py  trim.py
src/network_fmri/submit/: __init__.py  _common.py  _slurm.py  curate.py  datalad.py  events.py  export.py  fmap_link.py  merge.py  pipeline.py  select.py  trim.py
src/network_fmri/submit/templates/: curate.sbatch.tmpl  datalad.sbatch.tmpl  events.sbatch.tmpl  export.sbatch.tmpl  fmap_link.sbatch.tmpl  merge.sbatch.tmpl  select.sbatch.tmpl  trim.sbatch.tmpl
tests/: test_b0link.py  test_curation.py  test_datalad_ds.py  test_heuristic.py  test_qa_runs.py  test_run_cli.py  test_session_map.py  test_submit.py  test_trim.py
