[project]
name = "network_fmri"
version = "0.1.0"
description = "Orchestrator for the r01network pipeline: Flywheel -> BIDS (and downstream derivatives) by importing and running open-source packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flywheel-sdk==21.5.0",
    # The BIDS-curation engine: our sherlock-compat fork, pinned to an immutable
    # commit (multi-echo + fieldmap/magnitude file-selection). The study-specific
    # heuristic + curation map live in this repo (src/network_fmri), not the fork.
    "fw-heudiconv @ git+https://github.com/lobennett/fw-heudiconv.git@f4fae26",
    # QA metrics/decisions (short-run flagging, …) — its own package, imported here
    # and wired into the data-selection layer.
    "network_qa @ git+https://github.com/lobennett/network_qa.git@c945ecd",
]

[project.scripts]
fw2bids = "network_fmri.run:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Permit the ``fw-heudiconv @ git+...`` direct reference in dependencies.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/network_fmri"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "network_fmri/config"

[tool.pytest.ini_options]
testpaths = ["tests"]
